--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "concurrently \"npm run dev\" \"npm run flask\"",
+    "react": "react-scripts start",
+    "flask": "cd ../backend && python -m flask --app flask_app run"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.8",
+    "concurrently": "^9.2.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "sweetalert2": "^11.23.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
