--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
     "recharts": "^3.1.2",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.23.0"
   },
   "devDependencies": {
