--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "flask": "cd ../backend && python -m flask --app flask_app run"
   },
   "dependencies": {
+    "@gpt4free/g4f.dev": "^1.0.5",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.8",
