--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 KEY_POLLINATIONS=wxULGKT2hKlvH4im
-KEY_GROQ=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
+VITE_KEY_GROQ=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
+
+VITE_BACKEND_URL=http://127.0.0.1:5000
