--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 KEY_POLLINATIONS=wxULGKT2hKlvH4im
 VITE_KEY_GROQ=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
 
-VITE_BACKEND_URL=http://127.0.0.1:5000
+VITE_BACKEND_URL=https://commithub-backend-yjle.onrender.com/
+LOCAL_BACKEND_URL=http://127.0.0.1:5000
