--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 KEY_POLLINATIONS=wxULGKT2hKlvH4im
 VITE_KEY_GROQ=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
 
-VITE_BACKEND_URL=http://15.134.32.170:5000
-LOCAL_BACKEND_URL=http://127.0.0.1:5000
+VITE_BACKEND_URL=https://15.134.32.170
+LOCAL_BACKEND_URL=https://127.0.0.1:5000
 
 VITE_LOCAL_BACKEND_URL=http://127.0.0.1:5000    
