--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@gpt4free/g4f.dev": "^1.0.5",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.8",
