changed the terminologies based on the csc

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 KEY_POLLINATIONS=wxULGKT2hKlvH4im
 VITE_KEY_GROQ=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
 
-VITE_BACKEND_URL=https://15.134.32.170
+VITE_BACKEND_URL=https://commithub.shop
 LOCAL_BACKEND_URL=https://127.0.0.1:5000
 
 VITE_LOCAL_BACKEND_URL=http://127.0.0.1:5000    
