positions can now be added

--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "flask": "cd ../backend && python -m flask --app flask_app run"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@gpt4free/g4f.dev": "^1.0.5",
     "@mui/icons-material": "^7.3.4",
-    "@mui/material": "^7.3.4",
+    "@mui/material": "^7.3.5",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.8",
