--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 KEY_POLLINATIONS=wxULGKT2hKlvH4im
 VITE_KEY_GROQ=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
 
-VITE_BACKEND_URL=http://127.0.0.1:5000   
-LOCAL_BACKEND_URL=https://127.0.0.1:5000
+VITE_BACKEND_URL=https://commithub.shop   
+LOCAL_BACKEND_URL=https://commithub.shop
 
 VITE_LOCAL_BACKEND_URL=http://127.0.0.1:5000    
