--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 KEY_POLLINATIONS=wxULGKT2hKlvH4im
-VITE_KEY_GROQ=
+VITE_KEY_GROQ=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
 
 VITE_BACKEND_URL=http://127.0.0.1:5000   
 LOCAL_BACKEND_URL=http://127.0.0.1:5000
